Prevent user highlighting of cards on mobile

--- a/app/assets/scss/main.scss
+++ b/app/assets/scss/main.scss
@@ -117,12 +117,11 @@ header nav ul {
 }
 
 .card {
-  //padding: 1em 2em;
-
-
+  user-select: none;
+  -webkit-tap-highlight-color: rgba(0,0,0,0);
+  -webkit-tap-highlight-color: transparent;
   margin: 2.2em 1em;
   box-shadow: 0px 0px 9px 5px rgba(235,235,235,1);
-
   border-radius: 5px;
 
   .card-head {
